--- a/home/home.html
+++ b/home/home.html
@@ -435,14 +435,14 @@
 
         <ul class="nav-links">
             <li class="active"><a href="home.html" target="_self">Home</a></li>
-            <li><a href="https://prediction-final.vercel.app/" target="_self">Yield Prediction</a></li>
-            <li><a href="diagno.html" target="_self">Diagnose</a></li>
-            <li><a href="../agrilearn/agrilearn.html" target="_self">AgriLearn</a></li>
-            <li><a href="map.html" target="_self">Fertilizer</a></li>
-            <li><a href="weather.html" target="_self">Weather</a></li>
-            <li><a href="dasboard.html" target="_self">Sales Prediction</a></li>
-            <li><a href="government.html" target="_self">Government Schema</a></li>
-            <li><a href="contact.html" target="_self">Contact Us</a></li>
+            <li><a href="https://prediction-final-main.vercel.app/" target="_self">Yield Prediction</a></li>
+            <li><a href="../menu/diagnose.html" target="_self">Diagnose</a></li>
+            <li><a href="../menu/agrilearn.html" target="_self">AgriLearn</a></li>
+            <li><a href="../menu/fertilizer.html" target="_self">Fertilizer</a></li>
+            <li><a href="../menu/weather.html" target="_self">Weather</a></li>
+            <li><a href="../menu/SalesPrediction.html" target="_self">Sales Prediction</a></li>
+            <li><a href="../menu/government.html" target="_self">Government Schema</a></li>
+            <li><a href="../menu/contact.html" target="_self">Contact Us</a></li>
             <li class="translate-item">
                 <div id="google_translate_element"></div>
             </li>
@@ -453,7 +453,7 @@
     <section id="home" class="hero fade-in">
         <div class="hero-overlay">
             <h1><span>Smart Agriculture</span><br>Made Simple</h1>
-            <p>AI-powered crop Yield prediction and optimization, weather insights, and agricultural support for Odisha farmers.</p>
+            <p>AI-powered crop Yield prediction and optimization, weather insights, and agricultural support for Tamil Nadu farmers.</p>
             <div class="hero-buttons">
                 <a href="https://joyful-valkyrie-2db4e9.netlify.app/" target="_self">
                     <button class="btn primary">Start Diagnosis</button>
