--- a/menu/agrilearn.html
+++ b/menu/agrilearn.html
@@ -735,8 +735,8 @@
 
         <ul class="nav-links" id="navLinks">
             <!-- local pages driven by lowercase data-page -->
-            <li><a href="home.html" target="_self">home</a></li>
-            <li><a href="yield prediction.html" target="_self">yield prediction</a></li>
+            <li><a href="../home/home.html" target="_self">home</a></li>
+            <li><a href="https://prediction-final-main.vercel.app/" target="_self">yield prediction</a></li>
             <!-- external diagnose link kept static -->
             <li>
                 <a href="https://joyful-valkyrie-2db4e9.netlify.app/" target="_self" rel="noopener noreferrer">
@@ -744,12 +744,12 @@
                 </a>
             </li>
             <li>
-                <a href="agrilearn.html" target="_self">agrilearn</a>
+                <a href="../menu/agrilearn.html" target="_self">agrilearn</a>
             </li>
-            <li><a href="map.html" target="_self">fertilizer</a></li>
-            <li><a href="weather.html" target="_self">weather</a></li>
-            <li><a href="sales prediction.html" target="_self">sales prediction</a></li>
-            <li><a href="contact us.html" target="_self">contact us</a></li>
+            <li><a href="../menu/fertilizer.html" target="_self">fertilizer</a></li>
+            <li><a href="../menu/weather.html" target="_self">weather</a></li>
+            <li><a href="../menu/SalesPrediction.html" target="_self">sales prediction</a></li>
+            <li><a href="../menu/contact us.html" target="_self">contact us</a></li>
             <li class="translate-item">
                 <div id="google_translate_element"></div>
             </li>
