--- a/menu/diagnose.html
+++ b/menu/diagnose.html
@@ -336,18 +336,18 @@
                 <div class="nav-left-icon">
                     <i class="fa-solid fa-cloud-sun-rain"></i>
                 </div>
-                <div class="nav-title">Odisha Crop Disease Detection</div>
+                <div class="nav-title">Tamil Nadu Crop Disease Detection</div>
             </div>
 
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="../home/home.html">Home</a></li>
                 <li><a href="https://prediction-final.vercel.app/">Yield Prediction</a></li>
-                <li class="active"><a href="diagno.html">Diagnose</a></li>
-                <li><a href="agrilearn.html">AgriLearn</a></li>
-                <li><a href="map.html">Fertilizer</a></li>
-                <li><a href="weather.html">Weather</a></li>
-                <li><a href="dasboard.html">Sales Prediction</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="../menu/diagnose.html">Diagnose</a></li>
+                <li><a href="../menu/agrilearn.html">AgriLearn</a></li>
+                <li><a href="../menu/fertilizer.html">Fertilizer</a></li>
+                <li><a href="../menu/weather.html">Weather</a></li>
+                <li><a href="../menu/SalesPrediction.html">Sales Prediction</a></li>
+                <li><a href="../menu/contact.html">Contact</a></li>
             </ul>
 
             <div class="nav-right">
