--- a/home/home.html
+++ b/home/home.html
@@ -455,10 +455,10 @@
             <h1><span>Smart Agriculture</span><br>Made Simple</h1>
             <p>AI-powered crop Yield prediction and optimization, weather insights, and agricultural support for Tamil Nadu farmers.</p>
             <div class="hero-buttons">
-                <a href="https://joyful-valkyrie-2db4e9.netlify.app/" target="_self">
+                <a href="../menu/diagnose.html" target="_self">
                     <button class="btn primary">Start Diagnosis</button>
                 </a>
-                <a href="contact.html">
+                <a href="../menu/contact.html" target="_self">
                     <button class="btn secondary">Report Issue</button>
                 </a>
             </div>
@@ -468,28 +468,28 @@
     <!-- Cards Section -->
     <section id="diagnose" class="cards-section fade-in">
         <div class="cards-container">
-            <div class="card" data-link="https://joyful-valkyrie-2db4e9.netlify.app/">
+            <div class="card" data-link="../menu/diagnose.html">
                 <img src="img1.webp" alt="Crop Disease" />
                 <h3>Quick Disease Detection</h3>
                 <p>Upload a crop photo → Instantly know the disease &amp; cure.</p>
                 <p class="extra">AI-powered accurate detection in seconds.</p>
             </div>
 
-            <div class="card" data-link="map.html">
+            <div class="card" data-link="../menu/fertilizer.html">
                 <img src="img2.avif" alt="Fertilizer" />
                 <h3>Fertilizer Recommendations</h3>
                 <p>Get the right fertilizer suggestions for better yield.</p>
                 <p class="extra">Personalized guidance for soil health.</p>
             </div>
 
-            <div class="card" data-link="agrilearn.html">
+            <div class="card" data-link="../menu/agrilearn.html">
                 <img src="img3.webp" alt="Learning" />
                 <h3>Farmer Guide</h3>
                 <p>Step-by-step tutorials for new farmers.</p>
                 <p class="extra">Easy to follow crop-growing tips.</p>
             </div>
 
-            <div class="card" data-link="map.html">
+            <div class="card" data-link="../menu/fertilizer.html">
                 <img src="img4.avif" alt="Shops" />
                 <h3>Nearby Shops</h3>
                 <p>Find fertilizer shops with phone &amp; location.</p>
