--- a/menu/weather.html
+++ b/menu/weather.html
@@ -767,7 +767,7 @@
                         </label>
                         <select id="stateSelect" class="location-select">
                             <option value="">-- Select State / UT --</option>
-                            <option value="Odisha" selected>Odisha</option>
+                            <option value="Odisha" selected>Tamilnadu</option>
                         </select>
                     </div>
 
@@ -776,38 +776,46 @@
                             <i class="fa-solid fa-location-dot"></i> DISTRICT
                         </label>
                         <select id="districtSelect" class="location-select">
-                            <option value="">-- Select District --</option>
-                            <option value="Angul">Angul</option>
-                            <option value="Balangir">Balangir</option>
-                            <option value="Balasore">Balasore</option>
-                            <option value="Bargarh">Bargarh</option>
-                            <option value="Bhadrak">Bhadrak</option>
-                            <option value="Boudh">Boudh</option>
-                            <option value="Cuttack">Cuttack</option>
-                            <option value="Deogarh">Deogarh</option>
-                            <option value="Dhenkanal">Dhenkanal</option>
-                            <option value="Gajapati">Gajapati</option>
-                            <option value="Ganjam">Ganjam</option>
-                            <option value="Jagatsinghpur">Jagatsinghpur</option>
-                            <option value="Jajpur">Jajpur</option>
-                            <option value="Jharsuguda">Jharsuguda</option>
-                            <option value="Kalahandi">Kalahandi</option>
-                            <option value="Kandhamal">Kandhamal</option>
-                            <option value="Kendrapara">Kendrapara</option>
-                            <option value="Keonjhar">Keonjhar</option>
-                            <option value="Khordha">Khordha</option>
-                            <option value="Koraput">Koraput</option>
-                            <option value="Malkangiri">Malkangiri</option>
-                            <option value="Mayurbhanj">Mayurbhanj</option>
-                            <option value="Nabarangpur">Nabarangpur</option>
-                            <option value="Nayagarh">Nayagarh</option>
-                            <option value="Nuapada">Nuapada</option>
-                            <option value="Puri">Puri</option>
-                            <option value="Rayagada">Rayagada</option>
-                            <option value="Sambalpur">Sambalpur</option>
-                            <option value="Subarnapur">Subarnapur</option>
-                            <option value="Sundargarh">Sundargarh</option>
-                        </select>
+    <option value="">-- Select District --</option>
+    <option value="Ariyalur">Ariyalur</option>
+    <option value="Chengalpattu">Chengalpattu</option>
+    <option value="Chennai">Chennai</option>
+    <option value="Coimbatore">Coimbatore</option>
+    <option value="Cuddalore">Cuddalore</option>
+    <option value="Dharmapuri">Dharmapuri</option>
+    <option value="Dindigul">Dindigul</option>
+    <option value="Erode">Erode</option>
+    <option value="Kallakurichi">Kallakurichi</option>
+    <option value="Kancheepuram">Kancheepuram</option>
+    <option value="Kanniyakumari">Kanniyakumari</option>
+    <option value="Karur">Karur</option>
+    <option value="Krishnagiri">Krishnagiri</option>
+    <option value="Madurai">Madurai</option>
+    <option value="Mayiladuthurai">Mayiladuthurai</option>
+    <option value="Nagapattinam">Nagapattinam</option>
+    <option value="Namakkal">Namakkal</option>
+    <option value="Nilgiris">Nilgiris</option>
+    <option value="Perambalur">Perambalur</option>
+    <option value="Pudukkottai">Pudukkottai</option>
+    <option value="Ramanathapuram">Ramanathapuram</option>
+    <option value="Ranipet">Ranipet</option>
+    <option value="Salem">Salem</option>
+    <option value="Sivaganga">Sivaganga</option>
+    <option value="Tenkasi">Tenkasi</option>
+    <option value="Thanjavur">Thanjavur</option>
+    <option value="Theni">Theni</option>
+    <option value="Thoothukudi">Thoothukudi</option>
+    <option value="Tiruchirappalli">Tiruchirappalli</option>
+    <option value="Tirunelveli">Tirunelveli</option>
+    <option value="Tirupathur">Tirupathur</option>
+    <option value="Tiruppur">Tiruppur</option>
+    <option value="Tiruvallur">Tiruvallur</option>
+    <option value="Tiruvannamalai">Tiruvannamalai</option>
+    <option value="Tiruvarur">Tiruvarur</option>
+    <option value="Vellore">Vellore</option>
+    <option value="Viluppuram">Viluppuram</option>
+    <option value="Virudhunagar">Virudhunagar</option>
+</select>
                     </div>
                 </div>
 
